# modelsight

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat  quickstart.py
modelsight/: __init__.py  settings.toml
modelsight/calibration/: __init__.py  calib.py
modelsight/curves/: __init__.py  compare.py  roc.py
src/modelsight/: __init__.py  _typing.py  config.py
src/modelsight/calibration/: __init__.py  calib.py
src/modelsight/curves/: __init__.py  _delong.py  compare.py  roc.py
tests/: conftest.py  test_calibration.py  test_modelsight.py  test_roc.py  utils.py
